--- a/client/src/pages/messenger/messenger.css
+++ b/client/src/pages/messenger/messenger.css
@@ -1,42 +1,50 @@
-.messenger{
-    height: calc(100vh-70px);
-    display:flex;
-}
-
-.chatMenu{
+.messenger {
+    height: calc(100vh - 70px);
+    display: flex;
+  }
+  
+  .chatMenu {
     flex: 3.5;
-}
-
-.chatMenuInput{
+  }
+  
+  .chatMenuInput {
     width: 90%;
-    padding: 10px;
+    padding: 10px 0;
     border: none;
-    border-bottom: 1px solid green;
-}
-
-.chatBox{
+    border-bottom: 1px solid gray;
+  }
+  
+  .chatBox {
     flex: 5.5;
-}
-
-.chatBoxWrapper{
+  }
+  
+  .chatBoxWrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.chatBoxTop{
+    position: relative;
+  }
+  
+  .chatBoxTop {
     height: 100%;
     overflow-y: scroll;
     padding-right: 10px;
-}
-
-.chatMessageInput{
+  }
+  
+  .chatBoxBottom {
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .chatMessageInput {
     width: 80%;
     height: 90px;
     padding: 10px;
-}
-
-.chatSubmitButton{
+  }
+  
+  .chatSubmitButton {
     width: 70px;
     height: 40px;
     border: none;
@@ -44,16 +52,41 @@
     cursor: pointer;
     background-color: teal;
     color: white;
-}
-
-.chatOnline{
+  }
+  
+  .chatOnline {
     flex: 3;
-}
-
-.chatMenuWrapper,
-.chatBoxWrapper,
-.chatOnlineWrapper{
+  }
+  
+  .chatMenuWrapper,
+  .chatBoxWrapper,
+  .chatOnlineWrapper {
     padding: 10px;
     height: 100%;
-}
-
+  }
+  
+  .noConversationText {
+    position: absolute;
+    top: 10%;
+    font-size: 50px;
+    color: rgb(224, 220, 220);
+    cursor: default;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .chatMenu {
+      flex: 1;
+    }
+  
+    .chatMenuInput {
+      display: none;
+    }
+  
+    .chatBox{
+      flex: 10;
+    }
+  
+    .chatOnline{
+      flex: 1px;
+    }
+  }
