--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -1,8 +1,8 @@
 .share {
     width: 100%;
     border-radius: 10px;
-    -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+    -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 16px -5px rgba(0, 0, 0, .8);
   }
   
   .shareWrapper {
