--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -84,8 +84,8 @@
             cursor: pointer;
           }
           button:hover{
-            background-color: #fecb25;
-            color: white;
+            background-color: #ffbb00;
+            color: #ffffff;
             transition:0.2s;
           }
         }
