--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -3,7 +3,7 @@
     height: calc(100vh - 60px);
     overflow-y:scroll;
     position: sticky;
-    top: 60px;
+    top: 40px;
     align-items: center;
 
 }
@@ -33,7 +33,7 @@
     margin-left: 60px;
     margin-right: 100px;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 8px;
     border-radius: 10px;
     color: aliceblue;
     cursor: pointer;
@@ -91,7 +91,8 @@
 
 
 .rights{
+    margin-left:70px;
     font-size: 14px;
-    color: rgb(165, 83, 42);
-    font-weight: 500;
+    color: rgb(0, 43, 161);
+    font-weight: 400;
 }
