--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -3,13 +3,13 @@
     height: calc(100vh - 60px);
     overflow-y:scroll;
     position: sticky;
-    top: 40px;
+    top: 60px;
     align-items: center;
 
 }
 
 ::-webkit-scrollbar{
-    width: 10px;
+    display: none;
 }
 
 ::-webkit-scrollbar-thumb{
@@ -56,13 +56,13 @@
     width: 150px;
     border:none;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 15px;
     font-weight: 600;
     cursor: pointer;
     margin-left: 60px;
     font-size: 1.4rem;
-    color: aliceblue;
-    background-color: rgb(255, 179, 0);
+    color: rgb(255, 255, 255);
+    background-color: rgb(166, 0, 255);
 }
 
 .sidebarButton:hover{
