--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -32,6 +32,7 @@
     margin: auto;
     top: 160px;
     border: 4px solid rgb(48, 128, 179);
+    background-color: rgb(252, 251, 233);
 }
 
 .profileInfo{
