--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -77,7 +77,8 @@
   .rightbarFollowings{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content:space-between; */
+    gap: 20px;
   }
   
   .rightbarFollowing{
