topbar image border

--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -99,4 +99,6 @@
     border-radius: 50%;
     object-fit: cover;
     cursor: pointer;
+    border: 2px solid white;
+    background-color: white;
 }
