--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -30,10 +30,10 @@
     border-radius: 10px;
     width: 65%;
     margin-right: 100px;
-    -webkit-box-shadow: 0px 0px 93px -24px rgb(119, 119, 119);
+/*     -webkit-box-shadow: 0px 0px 93px -24px rgb(119, 119, 119);
     -moz-box-shadow: 0px 0px 93px -24px rgb(106, 106, 106);
-    box-shadow: 2px 4px 60px -24px rgb(76, 100, 172);
-    border: 2px solid rgba(151, 151, 151, 0.107);
+    box-shadow: 2px 4px 60px -24px rgb(76, 100, 172); */
+    /* border: 2px solid rgba(151, 151, 151, 0.107); */
 
 }
 
